core/main/default/objects/LoggingMessage__e/LoggingMessage__e.object-meta.xml
<CustomObject>
    <description>Capture Logging Events when enabled</description>
    <label>Logging Message</label>
    <pluralLabel>Logging Messages</pluralLabel>
</CustomObject>