core/main/default/objects/LoggingMessage__e/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Name of the class that publish the event</description>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>