core/main/default/objects/LoggingMessage__e/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>End Time of the logging</description>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>