core/main/default/objects/LoggingMessage__e/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <description>Log Level of the message</description>
    <label>Log Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>