core/main/default/objects/LoggingMessage__e/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>Name of the method that publish the event</description>
    <label>Method Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>