core/main/default/objects/LoggingMessage__e/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Identify the transaction that publish this event</description>
    <label>Transaction Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>