core/main/default/objects/LoggingMessage__e/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username of the user that has fired this event</description>
    <label>Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>